feat(filter): add url arguments and filtering feature for notifications api
